# security-keys-rust

./: .gitmodules  Cargo.toml  LICENSE  README.md  usb-storm.debug
workspace/usb-storm/: Cargo.toml  README.md  TODO.md  build.rs
workspace/usb-storm/src/: Bytes.rs  DeviceInformationDatabase.rs  FixedUsbDeviceCapabilities.rs  UsbDevice.rs  UsbPortNumber.rs  UsbSpeed.rs  UsbString.rs  UsbStringFinder.rs  UsbStringOrIndex.rs  VecExt.rs  adjust_descriptor_index.rs  lib.rs  main.rs  mod.rs  return_ok_if_dead.rs  return_ok_if_dead_or_alive_none.rs  u11.rs  u4.rs  u5.rs
workspace/usb-storm/src/additional_descriptors/: AdditionalDescriptor.rs  AdditionalDescriptorParseError.rs  AdditionalDescriptorParser.rs  DescriptorHeaderLength.rs  LengthAdjustment.rs  extra_to_slice.rs  mod.rs  parse_additional_descriptors.rs  reduce_b_length_to_descriptor_body_length.rs  verify_remaining_bytes.rs
workspace/usb-storm/src/binary/: CommandLineParser.rs  GoodAndBadDevicesExt.rs  ProgramError.rs  SerializingError.rs  mod.rs  new_ron_serializer.rs  serialize.rs  usb_devices_serialize.rs  which_serialize.rs  write.rs
workspace/usb-storm/src/class_and_protocol/: ApplicationSpecificInterfaceSubClass.rs  AssociationProtocol.rs  AudioFunctionSubClass.rs  AudioProtocol.rs  AudioSubClass.rs  AudioVideoInterfaceSubClass.rs  BasicAudioDeviceDefinition.rs  BluetoothProtocol.rs  ClassAndProtocol.rs  CommunicationsDeviceClassControlSubClass.rs  CommunicationsDeviceClassDataSubClassAndProtocol.rs  DebugDiagnosticProtocol.rs  DeviceClass.rs  DeviceOrAlternateSetting.rs  DeviceOrInterface.rs  DiagnosticProtocol.rs  DiagnosticSubClass.rs  DvbCommonDeviceProtocol.rs  DvbCommonInterfaceProtocol.rs  FunctionClass.rs  FunctionClassParseError.rs  HubSubClass.rs  HubTransactionTranslatorProtocol.rs  HumanInterfaceDeviceInterfaceBootProtocol.rs  HumanInterfaceDeviceInterfaceSubClass.rs  InterfaceClass.rs  KnownOrUnknownSubClassAndProtocol.rs  KnownOrUnrecognizedProtocol.rs  KnownOrUnrecognizedSubClassAndProtocol.rs  KnownVendorSpecificOrUnrecognizedProtocol.rs  MassStorageProtocol.rs  MassStorageSubClass.rs  MiscellaneousDeviceSubClass.rs  MiscellaneousInterfaceSubClass.rs  PrinterProtocol.rs  PrinterSubClass.rs  PublicSwitchedTelephoneNetworkProtocol.rs  RemoteNetworkDriverInterfaceSpecificationProtocol.rs  RndisProtocol.rs  SmartCardInterfaceSubClass.rs  (+18 more)
workspace/usb-storm/src/collections/: Bytes.rs  TryClone.rs  VecExt.rs  WithCapacity.rs  WrappedBitFlags.rs  WrappedHashMap.rs  WrappedHashSet.rs  WrappedIndexMap.rs  WrappedIndexSet.rs  mod.rs
workspace/usb-storm/src/configuration/: Configuration.rs  ConfigurationAdditionalDescriptor.rs  ConfigurationAdditionalDescriptorParser.rs  ConfigurationAttributes.rs  ConfigurationDescriptor.rs  ConfigurationExtraDescriptor.rs  ConfigurationExtraDescriptorParseError.rs  ConfigurationExtraDescriptorParser.rs  ConfigurationNumber.rs  ConfigurationParseError.rs  GetConfigurationDescriptorBackendError.rs  MaximumNumberOfConfigurations.rs  MaximumPowerConsumption.rs  MaximumPowerConsumptionMilliamps.rs  UsbConfiguration.rs  get_active_config_descriptor.rs  get_config_descriptor.rs  get_configuration.rs  mod.rs
workspace/usb-storm/src/context/: Context.rs  ContextInitializationError.rs  ContextInner.rs  mod.rs
workspace/usb-storm/src/control_transfers/: ControlTransferError.rs  ControlTransferRecipient.rs  ControlTransferRequestType.rs  Request.rs  TimeOut.rs  control_transfer.rs  mod.rs  (+1 more)
(+1643 files in other folders)
