# This file is part of security-keys-rust. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/raphaelcohn/security-keys-rust/master/COPYRIGHT. No part of security-keys-rust, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2021 The developers of security-keys-rust. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/raphaelcohn/security-keys-rust/master/COPYRIGHT.


[package]
name = "security-keys-rust"
description = "security-keys-rust"
keywords = ["security-keys-rust"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/raphaelcohn/security-keys-rust"
repository = "https://github.com/raphaelcohn/security-keys-rust.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = '2018'
version = "0.0.0"

[dependencies]
arrayvec = "^0.7.1"
enumflags2 = { version = "^0.7.1", features = ["std"] }
errno = "^0.2.7"
libc = "^0.2.98"
libloading = "^0.7.0"
likely = "^0.1.0"
maplit = "^1.0.2"
memchr = "^2.4.0"
plist = "^1.1.0"
rusb = "^0.8.1"
strum = "^0.21.0"
strum_macros = "^0.21.0"
swiss-army-knife = "^0.0.21"
