# This file is part of security-keys-rust. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/raphaelcohn/security-keys-rust/master/COPYRIGHT. No part of security-keys-rust, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2021 The developers of security-keys-rust. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/raphaelcohn/security-keys-rust/master/COPYRIGHT.


[package]
name = "usb-storm"
description = "A library and command line program for enumerating USB device in excruciating detail and parsing USB descriptors"
keywords = ["usb"]
categories = ["command-line-utilities", "hardware-support", "parser-implementations"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/raphaelcohn/security-keys-rust"
repository = "https://github.com/raphaelcohn/security-keys-rust.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = '2018'
version = "0.0.0"

[dependencies]
arrayvec = "^0.7.1"
enumflags2 = { version = "^0.7.1", features = ["std", "serde"] }
indexmap = { version = "^1.7.0", features = ["std", "serde-1"] }
dtoa = "^0.4.8"
itoa = { version = "^0.4.7", features = ["std", "i128"] }
likely = "^0.1.0"
libusb1-sys = { version = "^0.5.0", features = ["vendored"] }
rusb = { version = "^0.8.1", features = ["vendored"] }
serde = { version = "^1.0.126", features = ["derive"] }
swiss-army-knife = "^0.0.21"

# Binary
clap = "^2.33.3"
ron = "^0.6.4"
serde_yaml = "^0.8.17"
serde-lexpr = "^0.1.2"

